[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
dependencies = [
    "pytorch",
]

[project]
name = "mrboost"
version = "0.0.1"
authors = [
  { name="Chunxu Guo", email="chunxu@wustl.edu" },
]
description = "Some useful tools for MRI reconstruction"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]