[project]
name = "mrboost"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Chunxu Guo", email = "chunxu@wustl.edu" }
]
dependencies = [
    "scipy>=1.13.0",
    "numpy>=1.26.4",
    "einops>=0.8.0",
    "tqdm>=4.66.2",
    "toolz>=0.12.1",
    "h5py>=3.11.0",
    "nibabel>=5.2.1",
    "pydicom>=2.4.4",
    "zarr>=2.17.2",
    "torchkbnufft>=1.4.0",
    "xarray>=2024.3.0",
    "jax[cpu]>=0.4.26",
    "fire>=0.6.0",
    "torch>=2.3.0",
    "pytorch-finufft @ git+https://github.com/flatironinstitute/pytorch-finufft.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mrboost"]
